--- a/app/src/main/res/layout/fragment_dishes.xml
+++ b/app/src/main/res/layout/fragment_dishes.xml
@@ -38,5 +38,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_dishes"/>
-
+        <TextView
+            android:id="@+id/tv_no_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_dishes_available"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="@dimen/dimen_20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
